--- a/baskara.html
+++ b/baskara.html
@@ -30,6 +30,6 @@
 <div id="res2"  style="width:290px; margin-right:10px; float:left; padding-right: 100px;"></div>>  
 
 <script src="script.js"></script>
-<footer>&copy;ensicom </footer>
+<footer></footer>
 </body>
 </html>
